install search bar

--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -1,13 +1,18 @@
 ---
 layout: posts
 author: Huan
-title: 
+title: DQN
+
+
+
 ---
-DQN
+
 
 A **DQN** implementation in tensorflow with target network & random experience replay.
 
 Environment from openai gym: CartPole-v0
+
+[Code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DQN)
 
 ---
 <br>
@@ -56,3 +61,5 @@ Stop TD target from contributing to gradient computation:
 
 [Human-level control through deep reinforcement learning
 (Mnih et al., 2015)](https://storage.googleapis.com/deepmind-media/dqn/DQNNaturePaper.pdf)
+
+<br>
