--- a/_posts/2019-03-07-DDQN.md
+++ b/_posts/2019-03-07-DDQN.md
@@ -1,14 +1,16 @@
 ---
 layout: posts
 author: Huan
+title: DDQN
 
 
 ---
-Double DQN (DDQN)
 
 A **Double DQN (DDQN)** implementation in tensorflow with random experience replay.
 
 Environment from openai gym: CartPole-v0
+
+[Code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DDQN)
 
 ---
 <br>
@@ -51,3 +53,5 @@ Select minibatch actions with largest Q values from model network, create indice
 
 [Deep Reinforcement Learning with Double Q-learning
 (Hasselt, Guez & Silver, 2016)](https://arxiv.org/pdf/1509.06461.pdf)
+
+<br>
