--- a/_posts/2019-03-10-Duel_DDQN.md
+++ b/_posts/2019-03-10-Duel_DDQN.md
@@ -1,12 +1,15 @@
 ---
 layout: posts
 author: Huan
+title: Dueling DDQN
+
 ---
-Dueling DDQN
 
 A **Dueling Double DQN (Dueling DDQN)** implementation in tensorflow with random experience replay.
 
 Environment from openai gym: CartPole-v0
+
+[Code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/duel_DDQN)
 
 ---
 <br>
@@ -48,3 +51,5 @@ V represents the value function layer, A represents the Advantage function layer
 
 [Dueling Network Architectures for Deep Reinforcement Learning
 (Wang et al., 2015)](https://arxiv.org/pdf/1511.06581.pdf)
+
+<br>
