--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -10,7 +10,7 @@ title: DQN
 
 A **DQN** implementation in tensorflow with target network & random experience replay.
 
-Environment from openai gym: CartPole-v0
+Environment from OpenAI's gym: CartPole-v0
 
 [Code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DQN)
 
