--- a/_posts/2019-03-07-DDQN.md
+++ b/_posts/2019-03-07-DDQN.md
@@ -8,7 +8,7 @@ title: DDQN
 
 A **Double DQN (DDQN)** implementation in tensorflow with random experience replay.
 
-Environment from openai gym: CartPole-v0
+Environment from OpenAI's gym: CartPole-v0
 
 [Code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DDQN)
 
