--- a/_posts/2019-03-10-Duel_DDQN.md
+++ b/_posts/2019-03-10-Duel_DDQN.md
@@ -7,7 +7,7 @@ title: Dueling DDQN
 
 A **Dueling Double DQN (Dueling DDQN)** implementation in tensorflow with random experience replay.
 
-Environment from openai gym: CartPole-v0
+Environment from OpenAI's gym: CartPole-v0
 
 [Code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/duel_DDQN)
 
