--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -8,7 +8,7 @@ title: DQN
 ---
 
 
-A **DQN** implementation in tensorflow with target network & random experience replay.
+A **Deep Q Network** implementation in tensorflow with target network & random experience replay.
 
 Environment from OpenAI's gym: CartPole-v0
 
