--- a/_posts/2019-03-10-Duel_DDQN.md
+++ b/_posts/2019-03-10-Duel_DDQN.md
@@ -5,7 +5,7 @@ title: Dueling DDQN
 
 ---
 
-A **Dueling Double DQN (Dueling DDQN)** implementation in tensorflow with random experience replay.
+A **Dueling Double Deep Q Network (Dueling DDQN)** implementation in tensorflow with random experience replay.
 
 Environment from OpenAI's gym: CartPole-v0
 
