--- a/_posts/2019-03-07-DDQN.md
+++ b/_posts/2019-03-07-DDQN.md
@@ -6,7 +6,7 @@ title: DDQN
 
 ---
 
-A **Double DQN (DDQN)** implementation in tensorflow with random experience replay.
+A **Double Deep Q Network (DDQN)** implementation in tensorflow with random experience replay.
 
 Environment from OpenAI's gym: CartPole-v0
 
