code link added

--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -2,21 +2,17 @@
 layout: posts
 author: Huan
 title: DQN
-
-
-
 ---
-
-
 A **Deep Q Network** implementation in tensorflow with target network & random experience replay.
 
 Environment from OpenAI's gym: CartPole-v0
 
-[Code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DQN)
+[Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DQN)
 
 ---
 <br>
-**Notations**
+
+**Notations:**
 
 Model network = $$Q_{\theta}$$ \\
 Model parameter = $$\theta$$ \\
@@ -28,7 +24,8 @@ Target network Q value = $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$)
 
 ---
 <br>
-**Equations**
+
+**Equations:**
 
 TD target = r (s, a) $$+$$ $$\gamma$$ $$max_{a}$$ $$Q_{\phi}$$ ($$s^{'}$$, $$a^{'}$$) \\
 <br>
@@ -38,28 +35,48 @@ $$\hspace{26pt}$$
 
 ---
 <br>
-**Implementation details**
+
+**Implementation details:**
 
 Update target parameter $$\phi$$ with model parameter $$\theta$$ :
->Copy $$\theta$$ to $$\phi$$ with *either* soft or hard parameter update.
+<br>
+Copy $$\theta$$ to $$\phi$$ with *either* soft or hard parameter update.
+<br>
 
->Hard parameter update:
->>![alt text](https://drive.google.com/uc?export=view&id=18CK3rHYEfDxVtxe1gnVn2Z10Dosrmrww)
-![alt text](https://drive.google.com/uc?export=view&id=1lNBR6BxZZfk_uGkDSOumUm9qntiJ5QhH)
+Hard parameter update:
+```
+with tf.variable_scope('hard_replace'):
+  self.target_replace_hard = [t.assign(m) for t, m in zip(self.target_net_params, self.model_net_params)]   
+```
+```
+# hard params replacement
+if self.learn_step % self.tau_step == 0:
+    self.sess.run(self.target_replace_hard)  
+self.learn_step += 1
+```
+<br>
 
->Soft parameter update:
->>polyak $$\cdot$$  $$\theta$$ + (1 $$-$$ polyak)  $$\cdot$$  $$\phi$$
+Soft parameter update:
+<br>
+polyak $$\cdot$$  $$\theta$$ + (1 $$-$$ polyak)  $$\cdot$$  $$\phi$$
 
->>![alt text](https://drive.google.com/uc?export=view&id=1OfxkRAMve0liZ3BlkS4pCoJ6CPPEjwQG)
+```
+with tf.variable_scope('soft_replace'):            
+  self.target_replace_soft = [t.assign(self.polyak * m + (1 - self.polyak) * t)
+                              for t, m in zip(self.target_net_params, self.model_net_params)]   
+```
 
+<br>
 Stop TD target from contributing to gradient computation:
->![alt text](https://drive.google.com/uc?export=view&id=1sw1WtddZn4t48QJhz_LMTthIPhOc4jtl)
-
+```
+# exclude td_target in gradient computation
+td_target = tf.stop_gradient(td_target)
+```
 ---
 <br>
-**References**
+
+**References:**
 
 [Human-level control through deep reinforcement learning
 (Mnih et al., 2015)](https://storage.googleapis.com/deepmind-media/dqn/DQNNaturePaper.pdf)
-
 <br>
