--- a/_posts/2019-03-10-Duel_DDQN.md
+++ b/_posts/2019-03-10-Duel_DDQN.md
@@ -9,11 +9,11 @@ A **Dueling Double Deep Q Network (Dueling DDQN)** implementation in tensorflow 
 
 Environment from OpenAI's gym: CartPole-v0
 
-[Code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/duel_DDQN)
+[Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/duel_DDQN)
 
 ---
 <br>
-**Notations**
+**Notations:**
 
 Network = $$Q_{\theta}$$ \\
 Parameter = $$\theta$$ \\
@@ -27,7 +27,7 @@ Parameter from the Value function layer = $$\beta$$
 
 ---
 <br>
-**Equations**
+**Equations:**
 
 (eqn 9) from the original paper [(Wang et al., 2015)](https://arxiv.org/pdf/1511.06581.pdf): \\
 Q(s, a; $$\theta$$, $$\alpha$$, $$\beta$$) =
@@ -40,14 +40,32 @@ $$\frac{1}{|A|}$$ $$\sum_{a'}$$ A(s, $$a^{'}$$; $$\theta$$, $$\alpha$$) ]
 
 ---
 <br>
-**Implementation details**
+**Implementation details:**
 
 V represents the value function layer, A represents the Advantage function layer:
->![alt text](https://drive.google.com/uc?export=view&id=1f901lKe-Fa_Y4ITX8NFNeMO7IX_O2fB9)
+```
+# contruct neural network
+def built_net(self, var_scope, w_init, b_init, features, num_hidden, num_output):              
+    with tf.variable_scope(var_scope):          
+      feature_layer = tf.contrib.layers.fully_connected(features, num_hidden,
+                                                        activation_fn = tf.nn.relu,
+                                                        weights_initializer = w_init,
+                                                        biases_initializer = b_init)
+      V = tf.contrib.layers.fully_connected(feature_layer, 1,
+                                            activation_fn = None,
+                                            weights_initializer = w_init,
+                                            biases_initializer = b_init)
+      A = tf.contrib.layers.fully_connected(feature_layer, num_output,
+                                            activation_fn = None,
+                                            weights_initializer = w_init,
+                                            biases_initializer = b_init)   
+      Q_val = V + (A - tf.reduce_mean(A, reduction_indices=1, keepdims=True)) # refer to eqn 9 from the original paper          
+    return Q_val   
+```
 
 ---
 <br>
-**References**
+**References:**
 
 [Dueling Network Architectures for Deep Reinforcement Learning
 (Wang et al., 2015)](https://arxiv.org/pdf/1511.06581.pdf)
