--- a/_posts/2019-05-30-py_mpp.md
+++ b/_posts/2019-05-30-py_mpp.md
@@ -7,7 +7,7 @@ title: Python's multiprocessing package
 
 Python's multiprocessing package for parallel data generation.
 
-[Code](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/)
+[Code](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/misc_python_examples/py_mpp.ipynb)
 
 In the context of reinforcement learning algorithms such as A3C or DPPO, data generation is done in parallel. This simple example program demonstrates how to use the Python's multiprocessing package to achieve parallel data generation.
 
