--- a/_posts/2019-05-30-py_mpp.md
+++ b/_posts/2019-05-30-py_mpp.md
@@ -9,7 +9,7 @@ Python's multiprocessing package for parallel data generation.
 
 [Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/misc_python_examples/py_mpp.ipynb)
 
-In the context of reinforcement learning algorithms such as A3C or DPPO, data generation is done in parallel. This simple example program demonstrates how to use the Python's multiprocessing package to achieve parallel data generation.
+This simple example program demonstrates how to use the Python's multiprocessing package to achieve parallel data generation.
 
 The main program has a chief that spawns multiple worker processes. Each worker spawns a single work process. The work process generates random integer data [1,3].
 
