--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -1,14 +1,15 @@
 ---
 layout: posts
 author: Huan
-title: dist tf
+title: Distributed Tensorflow
 
 ---
 Distributed Tensorflow example
 
 [Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/)
 
-This post demonstrates how to use distributed Tensorflow with Python's multiprocessing package.
+This post demonstrates how to use distributed Tensorflow with Python's
+multiprocessing package.
 
 Cluster definition:
 2 workers, 1 parameter server.
@@ -22,7 +23,14 @@ cluster = tf.train.ClusterSpec({
 ```
 
 Parameter server function:
+A tf.Variable (var) & a tf.FIFOQueue (q) is declared with the parameter server.
+They are both sharable across processes.
 
+For tf.FIFOQueue to be sharable, it has to be declared with the same device
+(in this case, the ps device) in both the parameter_server function and
+the worker function. A shared_name has to be given as well.
+
+The tf.Variable (var) is also declared under the ps device.
 ```
 def parameter_server():
     with tf.device("/job:ps/task:0"):
@@ -62,6 +70,10 @@ def parameter_server():
 ```
 
 Worker function:
+tf.FIFOQueue (q) is declared with the ps device. A same shared_name is also
+used.
+
+The tf.Variable (var) is declared under the worker device. It does not has to be declared under the ps device.
 ```
 def worker(worker_n):
     with tf.device("/job:ps/task:0"):
@@ -90,14 +102,8 @@ def worker(worker_n):
         sess.run(var.assign_add(1.0))
         qe = q.enqueue(sess.run(var))
         sess.run(qe)
-        #qd = q.dequeue()
-        #print("Worker %d: r" % worker_n, sess.run(qd))
         sleep(1.0)
 
-    #print("Worker %d q.size(): " % worker_n, sess.run(q.size()))  
-
-    #print("Worker %d: blocking..." % worker_n)
-    #server.join() # currently blocks forever
     print("Worker %d: ended..." % worker_n)
 ```
 
@@ -111,11 +117,7 @@ ps_proc.start()
 w1_proc.start()
 w2_proc.start()
 
-# if not join, parent will terminate before children
-# & children will terminate as well cuz children are daemon
-ps_proc.join()
-#w1_proc.join()
-#w2_proc.join()
+ps_proc.join() # only ps need to call join()
 
 for proc in [w1_proc, w2_proc, ps_proc]:
     proc.terminate() # only way to kill server is to kill it's process
