--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -4,7 +4,7 @@ author: Huan
 title: Distributed Tensorflow
 
 ---
-Distributed Tensorflow example
+Distributed Tensorflow with Python's multiprocessing package.
 
 [Full code](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/)
 
