--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -32,7 +32,9 @@ For tf.FIFOQueue to be sharable, it has to be declared with the same device
 (in this case, the ps device) in both the parameter_server function and
 the worker function. A shared_name has to be given as well.
 
-The tf.Variable (var) is also declared under the ps device.
+The tf.Variable (var) is also declared under the ps device. The value of var is displayed in the for loop.
+
+At the end of the function, the values stored in q will be displayed.
 ```
 def parameter_server():
     with tf.device("/job:ps/task:0"):
@@ -77,6 +79,8 @@ tf.FIFOQueue (q) is declared with the ps device. A same shared_name is also
 used.
 
 The tf.Variable (var) is declared under the worker device. It does not has to be declared under the ps device.
+
+The for loop increments the value of var and the values are stored in q.
 ```
 def worker(worker_n):
     with tf.device("/job:ps/task:0"):
