--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -32,9 +32,9 @@ For tf.FIFOQueue to be sharable, it has to be declared with the same device
 (in this case, the ps device) in both the parameter_server function and
 the worker function. A shared_name has to be given as well.
 
-The tf.Variable (var) is also declared under the ps device. The value of var is displayed in the for loop.
+The tf.Variable (var) is also declared under the ps device. The value of var is displayed in the first for loop.
 
-At the end of the function, the values stored in q will be displayed.
+At the end of the function, the values stored in q will be displayed in the last for loop.
 ```
 def parameter_server():
     with tf.device("/job:ps/task:0"):
@@ -56,13 +56,11 @@ def parameter_server():
 
     for i in range(10):
         print("Parameter server: var has value %.1f" % sess.run(var))
-        #print("ps: r", sess.run(qd))
         sleep(1.0)
         if sess.run(var) == 10.0:
           break
 
     sleep(3.0)
-    #print("ps: final r", sess.run(qd))
     print("ps q.size(): ", sess.run(q.size()))  
 
     for j in range(sess.run(q.size())):
@@ -78,7 +76,8 @@ Worker function:
 tf.FIFOQueue (q) is declared with the ps device. A same shared_name is also
 used.
 
-The tf.Variable (var) is declared under the worker device. It does not has to be declared under the ps device.
+The tf.Variable (var) is declared under the worker device. It does not have to
+be declared under the ps device.
 
 The for loop increments the value of var and the values are stored in q.
 ```
@@ -115,6 +114,8 @@ def worker(worker_n):
 ```
 
 Main program:
+
+Create the processes, run them and finally terminate them in a for loop.
 ```
 ps_proc = Process(target=parameter_server, daemon=True)
 w1_proc = Process(target=worker, args=(0, ), daemon=True)
