--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -6,7 +6,7 @@ title: Distributed Tensorflow
 ---
 Distributed Tensorflow with Python's multiprocessing package.
 
-[Full code](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/tf/dist%20tf/dist_tf.ipynb)
+[Full code](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/tf/dist_tf/dist_tf.ipynb)
 
 This post demonstrates how to use distributed Tensorflow with Python's
 multiprocessing package.
