edit post tf_dist

--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -4,12 +4,12 @@ author: Huan
 title: Distributed Tensorflow
 
 ---
-Distributed Tensorflow with Python's multiprocessing package.
+Distributed Tensorflow with Python multiprocessing package.
 
 [Full code](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/tf/dist_tf/dist_tf.ipynb)
 
 This post demonstrates how to use distributed Tensorflow with Python's
-multiprocessing package.
+multiprocessing package. A tf.FIFOQueue is used as a storage across processes.
 
 Cluster definition:
 
