--- a/_posts/2019-06-25-A3C_dist_tf.md
+++ b/_posts/2019-06-25-A3C_dist_tf.md
@@ -24,7 +24,7 @@ qe = GLOBAL_RUNNING_R.enqueue(ep_r)
 SESS.run(qe)
 ```
 
-The distributed Tensorflow part is very similar to a simple example discribed in
+The distributed Tensorflow part is very similar to a simple example described in
 this [post](https://chuacheowhuan.github.io/dist_tf/).
 
 Pin the global variables under the parameter server in both the parameter_server() & worker(worker_n) function:
