--- a/_posts/2019-06-25-RDN.md
+++ b/_posts/2019-06-25-RDN.md
@@ -190,10 +190,10 @@ The ```predictor_loss``` is the intrinsic reward.
 
 ---
 
-**Problems to be resolved:**
+**Problems encountered:**
 
-The actor's network occasionally returns nan for action. This happens randomly. Random
-initialization of the network & a smaller learning rate seems to help but does not resolve the issue completely.
+The actor's network occasionally returns '''nan''' for action. This happens randomly, most likely caused by exploding gradients.
+Not initializing or randomly initializing actor's weights results in nan when outputting action.
 
 ---
 
