--- a/_posts/2019-06-25-RDN.md
+++ b/_posts/2019-06-25-RDN.md
@@ -9,9 +9,11 @@ Random Distillation Network (RDN) with Proximal Policy Optimization (PPO) implen
 The agent starts to converge correctly at around 30 episodes & reached the flag 291 times out of 300 episodes (97% hit rate).
 It takes 385.09387278556824 seconds to complete 300 episodes on Google's Colab.
 
+Edit: A new version which corrects a numerical error(causes nan action) takes 780.2065596580505 seconds for 300 episodes. Both versions have similar results. The URL for the new version is updated.
+
 Checkout the <a href="https://chuacheowhuan.github.io/RDN/#charts">resulting charts</a> from program output.
 
-Full code: [Python file](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RDN_PPO/RDN_PPO_cont_ftr_nsn_mtCar.py), [Jupyter notebook](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RDN_PPO/RDN_PPO_cont_ftr_nsn_mtCar.ipynb) (The Jupyter notebook, which also contain the resulting charts at the end, can be run directly on Google's Colab.)
+Full code: [Python file](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RDN_PPO/RDN_PPO_cont_ftr_nsn_mtCar_php.py), [Jupyter notebook](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RDN_PPO/RDN_PPO_cont_ftr_nsn_mtCar_php.ipynb) (The Jupyter notebook, which also contain the resulting charts at the end, can be run directly on Google's Colab.)
 
 ---
 
@@ -132,7 +134,6 @@ PPO module contains the actor network & the critic network.
 **PPO's actor:**
 
 At every iteration, an action is sampled from policy network ```pi```.
-Entropy is NOT used in the computation of the loss in this program.
 ![image](/assets/images/RDN_PPO_tf_graph_img/PPO_a.png)
 
 ---
